--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "alchemy-sdk": "^3.5.1",
+    "dotenv": "^16.4.7",
+    "ethers": "^6.13.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
